--- a/resources/custom.css
+++ b/resources/custom.css
@@ -1,3 +1,51 @@
+@import url(http://fonts.googleapis.com/css?family=Gloria+Hallelujah);
+
 .print-pdf .reveal::after {
     background-image: none;
+}
+
+.reveal blockquote {
+    background: #f9f9f9;
+    border-left: 10px solid #ccc;
+    margin: 1.5em 10px;
+    padding: 0.5em 10px;
+    quotes: "\201C" "\201D" "\201C" "\201D";
+    font-size: 1.25em;
+    display: inline-block;
+}
+
+.reveal blockquote:before {
+    color: #ccc;
+    content: open-quote;
+    font-size: 4em;
+    line-height: 0.1em;
+    margin-right: 0.25em;
+    vertical-align: -0.4em;
+    display: inline-block;
+}
+
+.reveal .post-it {
+    background:#fefabc; 
+    padding:0.5em; 
+    font-family: 'Gloria Hallelujah', cursive; 
+    font-size:1.5em; 
+    color: #000; 
+    width:7em; 
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2em;
+
+    -moz-transform: rotate(7deg);
+    -webkit-transform: rotate(7deg);
+    -o-transform: rotate(7deg);
+    -ms-transform: rotate(7deg);
+    transform: rotate(7deg);
+
+    box-shadow: 0px 4px 6px #333;
+    -moz-box-shadow: 0px 4px 6px #333;
+    -webkit-box-shadow: 0px 4px 6px #333;
+}
+
+.reveal .post-it.orange {
+  background:#FFB812; 
 }
