--- a/templates/_index.html
+++ b/templates/_index.html
@@ -18,6 +18,8 @@
 
         <!-- For syntax highlighting -->
         <link rel="stylesheet" href="bower_components/highlightjs/styles/vs.css">
+        
+        <link href='https://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="resources/custom.css"
         <!-- Printing and PDF exports -->
         <script>
