--- a/resources/custom.css
+++ b/resources/custom.css
@@ -7,11 +7,12 @@
 .reveal blockquote {
     background: #f9f9f9;
     border-left: 10px solid #ccc;
-    margin: 1.5em 10px;
     padding: 0.5em 10px;
     quotes: "\201C" "\201D" "\201C" "\201D";
     font-size: 1.25em;
     display: inline-block;
+    text-align: left;
+    padding-left: 2em;
 }
 
 .reveal blockquote:before {
@@ -19,9 +20,10 @@
     content: open-quote;
     font-size: 4em;
     line-height: 0.1em;
-    margin-right: 0.25em;
-    vertical-align: -0.4em;
-    display: inline-block;
+    margin-right: -4em;
+    display: block;
+    float: left;
+    margin-left: -0.5em;
 }
 
 .reveal .post-it {
