--- a/templates/_index.html
+++ b/templates/_index.html
@@ -58,6 +58,9 @@
 
         </div>
 
+        <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
+        <script src="bower_components/qrjs/qr.js"></script>
+        <script src="bower_components/qr-code/src/qr-code.js"></script>
         <script src="bower_components/reveal.js/lib/js/head.min.js"></script>
         <script src="bower_components/reveal.js/js/reveal.js"></script>
         <script>
